# wingtra-area-sequencing

./: .gitignore  NOTES.md  README.md  pyproject.toml
data/: direction_choices.json  large_areas.json  mission_14.json  mission_14_home.json  sample_small.json
flight_sequence/: __init__.py  cli.py  models.py  solver.py
tests/: test_smoke.py  test_solver.py
