[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-sequence-work-sample"
version = "0.1.0"
description = "Python work sample for optimizing the sequence of fixed survey areas"
requires-python = ">=3.10"
dependencies = ["mip>=1.17.6,<2"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
packages = ["flight_sequence"]
